# claude-pwa-client

./: .gitignore  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: anon-check.yml
.tooling/local-ci/: anon-audit-deep.sh  anon-scan.sh  anon-words.example.txt  audit-w2-residue-allowlist.txt  audit-w2-residue.py
backend/: account_switch.py  chat_content.py  chat_routes.py  config.example.json  config.py  debug_routes.py  files_routes.py  fork.py  gen_vapid.py  hooks_router.py  jsonl_events.py  jsonl_plan_choices.py  jsonl_routes.py  jsonl_session_status.py  main.py  maintenance.py  paths.py  pty_confirm.py  pty_discover.py  pty_routes.py  pty_runner.py  pty_session_resolver.py  push.py  requirements.txt  state.py  subagents_routes.py  usage.py
backend/_generated/: http_endpoints.py
backend/cli/: __init__.py  gen_vapid.py
backend/core/: fork.py  maintenance.py  push.py  usage.py
backend/jsonl/: events.py  history.py  notifications.py  plan_choices.py  predicates.py  resolver.py  routes.py  session_status.py  tail.py  watcher.py
contracts/: .gitignore  README.md  package-lock.json  package.json
docs/: README.md  architecture.md  config.md  extending.md  sse-event-shape.md  streams.md  troubleshoot.md
docs/ops/: sunshine.md  (+1 more)
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js
frontend/: .npmrc  eslint.config.js  package-lock.json  package.json  vite.config.js
scripts/: gen-third-party-notices.py  healthcheck.sh  ws-pty-smoketest.py
(+368 files in other folders)
